# Studio-Brightness-PlusPlus

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  readme.md  studio-brightness-plusplus.manifest  studio-brightness-plusplus.rc
.github/: funding.yml
.github/workflows/: build-release.yml  build.yml
docs/: hid-map.md
include/: HdrMonitor.h  NvHdr.h  PresetConfirm.h  Updater.h  hid.h  orientation.h  resource.h
installer/: license.rtf  studio-brightness-plusplus.wxs
src/: HdrMonitor.cpp  Log.cpp  Log.h  LogWindow.cpp  LogWindow.h  NvHdr.cpp  OSDWindow.cpp  OSDWindow.h  PresetConfirm.cpp  Settings.cpp  Settings.h  TrayPopup.cpp  TrayPopup.h  Updater.cpp  hid.cpp  main.cpp  orientation.cpp
tools/: build-msi.ps1  gen-version.ps1
